--- a/ETUDE/index.html
+++ b/ETUDE/index.html
@@ -21,26 +21,180 @@
             <img class="logo" src="./Header_image/logo.png" alt="logo" />
           </a>
           <div class="header-menu">
-            <a href=""><span>PRODUCT</span></a>
-            <a href=""><span>BRAND</span></a>
+            <span class="product-hover">
+              <a href="">PRODUCT</a>
+            </span>
+            <span class="brand-hover">
+              <a href="">BRAND</a>
+            </span>
             <span class="new">NEW</span>
             <a href=""><span>MAKEUP LOOK </span></a>
             <a href=""><span>STORE</span></a>
             <a href=""><span>FOUNDATION FACTORY</span></a>
           </div>
           <div class="header-icon">
-            <a class="search-btn" href="">
+            <span class="search-btn">
               <i class="fa-solid fa-magnifying-glass"></i>
-            </a>
-            <a class="toggle-btn" href="">
+            </span>
+            <span class="toggle-btn" href="">
               <span></span>
               <span></span>
               <span></span>
-            </a>
+            </span>
           </div>
         </div>
       </div>
     </header>
+    <div class="product-hover-menu">
+      <div class="product-hover-menu-content">
+        <div class="product-hover-menu-title">
+          <a href="">
+            <div>
+              <span>신제품</span>
+              <span><i class="fa-solid fa-chevron-right"></i></span>
+            </div>
+          </a>
+          <a href="">
+            <div>
+              <span>전체보기</span>
+              <span><i class="fa-solid fa-chevron-right"></i></span>
+            </div>
+          </a>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">아이</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">싱글섀도우</a>
+              <a href="">아이팔레트</a>
+              <a href="">마스카라</a>
+              <a href="">아이라이너</a>
+              <a href="">아이브라우</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">립</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">립스틱</a>
+              <a href="">틴트</a>
+              <a href="">글로스</a>
+              <a href="">립펜슬</a>
+              <a href="">립케어</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">페이스</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">베이스·프라이머</a>
+              <a href="">쿠션·파운데이션</a>
+              <a href="">BB·컨실러</a>
+              <a href="">팩트·파우더</a>
+              <a href="">컨투어링·하이라이터</a>
+              <a href="">블러셔</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">네일</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">네일컬러</a>
+              <a href="">네일케어</a>
+              <a href="">네일리무버</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">스킨케어</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">토너·패드</a>
+              <a href="">에멀전</a>
+              <a href="">에센스·세럼</a>
+              <a href="">크림·밤</a>
+              <a href="">미스트</a>
+              <a href="">선케어</a>
+              <a href="">세트</a>
+              <a href="">기타</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">마스크·팩</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">시트마스크</a>
+              <a href="">페이셜팩</a>
+              <a href="">패치</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">클렌저</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">페이셜 클렌징</a>
+              <a href="">메이크업 클렌징</a>
+              <a href="">필링·스크럽</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">바디</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">워시</a>
+              <a href="">보습</a>
+              <a href="">핸드·풋</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">헤어</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">컬러·스타일링</a>
+              <a href="">헤어케어</a>
+            </div>
+          </div>
+        </div>
+        <div class="product-hover-menu-list">
+          <div class="product-hover-menu-list-inner">
+            <a class="product-hover-menu-list-inner-title" href="">툴</a>
+            <div class="product-hover-menu-list-inner-list">
+              <a href="">전체</a>
+              <a href="">브러쉬</a>
+              <a href="">퍼프</a>
+              <a href="">화장솜·면봉</a>
+              <a href="">속눈썹·브라우</a>
+              <a href="">공용기</a>
+              <a href="">헤어도구</a>
+              <a href="">기타</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="brand-hover-menu">
+      <div class="brand-hover-menu-content">
+        <a href=""><span>About ETUDE</span></a>
+        <a href=""><span>뷰티즌</span></a>
+        <a href=""><span>지구를 위한 활동</span></a>
+      </div>
+    </div>
     <div class="search-click">
       <div class="search-click-header">
         <a class="logo-img" href="">
@@ -51,21 +205,27 @@
         </span>
       </div>
       <div class="search-click-section">
-        <div class="search-for">Search For Products</div>
-        <div class="search-box">
-          <div class="search-box-inner">#립케어 강자! 진저슈가</div>
-          <a href="" class="search-box-icon"
-            ><i class="fa-solid fa-magnifying-glass"></i
-          ></a>
-        </div>
-        <div class="search-tag">
-          <span>TREND <b>#TAG</b></span>
-          <a href="">신제품 모아보기</a>
-          <a href="">진저슈가</a>
-          <a href="">플레이 컬러 아이즈</a>
-          <a href="">순정</a>
-          <a href="">비건</a>
-          <a href="">픽싱틴트</a>
+        <div class="search-click-section-inner">
+          <div class="search-for">Search For Products</div>
+          <div class="search-box">
+            <input
+              id="search-box-inner"
+              type="text"
+              placeholder="#립케어 강자! 진저슈가"
+            />
+            <span class="search-box-icon"
+              ><i class="fa-solid fa-magnifying-glass"></i
+            ></span>
+          </div>
+          <div class="search-tag">
+            <span>TREND <b>#TAG</b></span>
+            <a href="">신제품 모아보기</a>
+            <a href="">진저슈가</a>
+            <a href="">플레이 컬러 아이즈</a>
+            <a href="">순정</a>
+            <a href="">비건</a>
+            <a href="">픽싱 틴트</a>
+          </div>
         </div>
       </div>
     </div>
@@ -98,99 +258,117 @@
             <a class="toggle-menu-inner-category" href="">
               <a class="category-title" href=""><span>카테고리</span> </a>
               <div class="category-wrap">
-                <a class="category all" href="">전체</a>
-                <a class="category eye" href="">아이</a>
-                <div class="eye-menu">
-                  <a href="">전체</a>
-                  <a href="">싱글섀도우</a>
-                  <a href="">아이팔레트</a>
-                  <a href="">마스카라</a>
-                  <a href="">아이라이너</a>
-                  <a href="">아이브라우</a>
+                <div class="category all" href=""><a href="">전체</a></div>
+                <div class="category eye" href="">
+                  <a href="">아이</a>
+                  <div class="category-inner-list eye-menu">
+                    <a href="">전체</a>
+                    <a href="">싱글섀도우</a>
+                    <a href="">아이팔레트</a>
+                    <a href="">마스카라</a>
+                    <a href="">아이라이너</a>
+                    <a href="">아이브라우</a>
+                  </div>
                 </div>
-                <a class="category lip" href="">립</a>
-                <div class="lip-menu">
-                  <a href="">전체</a>
-                  <a href="">립스틱</a>
-                  <a href="">틴트</a>
-                  <a href="">글로스</a>
-                  <a href="">립펜슬</a>
-                  <a href="">립케어</a>
+                <div class="category lip" href="">
+                  <a href="">립</a>
+                  <div class="category-inner-list lip-menu">
+                    <a href="">전체</a>
+                    <a href="">립스틱</a>
+                    <a href="">틴트</a>
+                    <a href="">글로스</a>
+                    <a href="">립펜슬</a>
+                    <a href="">립케어</a>
+                  </div>
                 </div>
-                <a class="category face" href="">페이스</a>
-                <div class="face-menu">
-                  <a href="">전체</a>
-                  <a href="">베이스·프라이머</a>
-                  <a href="">쿠션·파운데이션</a>
-                  <a href="">팩트·파우더</a>
-                  <a href="">컨투어링·하이라이터</a>
-                  <a href="">블러셔</a>
+                <div class="category face" href="">
+                  <a href="">페이스</a>
+                  <div class="category-inner-list face-menu">
+                    <a href="">전체</a>
+                    <a href="">베이스·프라이머</a>
+                    <a href="">쿠션·파운데이션</a>
+                    <a href="">팩트·파우더</a>
+                    <a href="">컨투어링·하이라이터</a>
+                    <a href="">블러셔</a>
+                  </div>
                 </div>
-                <a class="category nail" href="">네일</a>
-                <div class="nail-menu">
-                  <a href="">전체</a>
-                  <a href="">네일컬러</a>
-                  <a href="">네일케어</a>
-                  <a href="">네일리무버</a>
+                <div class="category nail" href="">
+                  <a href="">네일</a>
+                  <div class="category-inner-list nail-menu">
+                    <a href="">전체</a>
+                    <a href="">네일컬러</a>
+                    <a href="">네일케어</a>
+                    <a href="">네일리무버</a>
+                  </div>
                 </div>
-                <a class="category skin" href="">스킨케어</a>
-                <div class="skin-menu">
-                  <a href="">전체</a>
-                  <a href="">토너·패드</a>
-                  <a href="">에멀젼</a>
-                  <a href="">에센스·세럼</a>
-                  <a href="">크림·밤</a>
-                  <a href="">미스트</a>
-                  <a href="">선케어</a>
-                  <a href="">세트</a>
-                  <a href="">기타</a>
+                <div class="category skin" href="">
+                  <a href="">스킨케어</a>
+                  <div class="category-inner-list skin-menu">
+                    <a href="">전체</a>
+                    <a href="">토너·패드</a>
+                    <a href="">에멀젼</a>
+                    <a href="">에센스·세럼</a>
+                    <a href="">크림·밤</a>
+                    <a href="">미스트</a>
+                    <a href="">선케어</a>
+                    <a href="">세트</a>
+                    <a href="">기타</a>
+                  </div>
                 </div>
-                <a class="category mask" href="">마스크팩</a>
-                <div class="mask-menu">
-                  <a href="">전체</a>
-                  <a href="">시트마스크</a>
-                  <a href="">페이셜팩</a>
-                  <a href="">패치</a>
+                <div class="category mask" href="">
+                  <a href="">마스크팩</a>
+                  <div class="category-inner-list mask-menu">
+                    <a href="">전체</a>
+                    <a href="">시트마스크</a>
+                    <a href="">페이셜팩</a>
+                    <a href="">패치</a>
+                  </div>
                 </div>
-                <a class="category clean" href="">클렌저</a>
-                <div class="clean-menu">
-                  <a href="">전체</a>
-                  <a href="">페이셜 클렌징</a>
-                  <a href="">메이크업 클렌징</a>
-                  <a href="">필링·스크럽</a>
+                <div class="category clean" href="">
+                  <a href="">클렌저</a>
+                  <div class="category-inner-list clean-menu">
+                    <a href="">전체</a>
+                    <a href="">페이셜 클렌징</a>
+                    <a href="">메이크업 클렌징</a>
+                    <a href="">필링·스크럽</a>
+                  </div>
                 </div>
-                <a class="category body" href="">바디</a>
-                <div class="body-menu">
-                  <a href="">전체</a>
-                  <a href="">워시</a>
-                  <a href="">보습</a>
-                  <a href="">핸드·풋</a>
+                <div class="category body" href="">
+                  <a href="">바디</a>
+                  <div class="category-inner-list body-menu">
+                    <a href="">전체</a>
+                    <a href="">워시</a>
+                    <a href="">보습</a>
+                    <a href="">핸드·풋</a>
+                  </div>
                 </div>
-                <a class="category hair" href="">헤어</a>
-                <div class="hair-menu">
-                  <a href="">전체</a>
-                  <a href="">컬러·스타일링</a>
-                  <a href="">헤어케어</a>
+                <div class="category hair" href="">
+                  <a href="">헤어</a>
+                  <div class="category-inner-list hair-menu">
+                    <a href="">전체</a>
+                    <a href="">컬러·스타일링</a>
+                    <a href="">헤어케어</a>
+                  </div>
                 </div>
-                <a class="category tool" href="">툴</a>
-                <div class="tool-menu">
-                  <a href="">전체</a>
-                  <a href="">브러쉬</a>
-                  <a href="">퍼프</a>
-                  <a href="">화장솜·면봉</a>
-                  <a href="">속눈썹·브라우</a>
-                  <a href="">공용기</a>
-                  <a href="">헤어도구</a>
-                  <a href="">기타</a>
+                <div class="category tool" href="">
+                  <a href="">툴</a>
+                  <div class="category-inner-list tool-menu">
+                    <a href="">전체</a>
+                    <a href="">브러쉬</a>
+                    <a href="">퍼프</a>
+                    <a href="">화장솜·면봉</a>
+                    <a href="">속눈썹·브라우</a>
+                    <a href="">공용기</a>
+                    <a href="">헤어도구</a>
+                    <a href="">기타</a>
+                  </div>
                 </div>
               </div>
             </a>
           </span>
         </div>
         <a class="toggle-menu" href=""><span>MAKEUP LOOK</span> </a>
-
         <a class="toggle-menu" href=""><span>FOUNDATION FACTORY</span> </a>
-
         <div class="toggle-menu" href="">
           <a href=""><span>@etudeofficial</span></a>
           <span class="toggle-menu-inside menu05">
@@ -248,7 +426,7 @@
           </span>
         </div>
         <div class="toggle-menu" href="">
-          <a href=""><span>뽀오얀</span></a>
+          <a href=""><span class="ppoohyan">뽀오얀</span></a>
           <span class="toggle-menu-inside menu09">
             <a class="toggle-menu-inner" href="">
               <span>About 뽀오얀</span>
@@ -260,6 +438,21 @@
             </a>
           </span>
         </div>
+      </div>
+      <div class="shopping-at">
+        <ul id="brand-store">
+          <li class="brand-store-select">
+            <span>shooping at</span>
+            <p>네이버 브랜드 스토어</p>
+            <i class="fa-solid fa-chevron-up"></i>
+          </li>
+          <li class="store-list">
+            <div class="naver-store"><a href="">네이버 브랜드 스토어</a></div>
+            <div class="olive-store"><a href="">올리브영 브랜드관</a></div>
+            <div class="amore-store"><a href="">아모레몰 브랜드관</a></div>
+            <div class="global-store"><a href="">ETUDE GLOBAL MALL</a></div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
